--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -7,19 +7,24 @@
 
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3">
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/custom_image_background"
+        >
 
 
         <ImageView
+            android:id="@+id/profileImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/profileImage"
             android:src="@mipmap/ic_launcher"
+            android:background="@drawable/custom_image_background"
+            android:scaleType="fitXY"
+            android:contentDescription="profile image"
             />
 
     </LinearLayout>
+
 
 
 
