--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
 
 
@@ -9,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/parentRelativeLayout"
-        android:layout_margin="10dp"
-        android:paddingLeft="10dp"
         android:background="@drawable/custom_background_message_sender"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         >
 
 
@@ -20,9 +21,9 @@
             android:layout_height="wrap_content"
             android:text="Sender ID"
             android:id="@+id/messageSender"
-            android:padding="5dp"
             android:textColor="#0720FA"
             android:textSize="20dp"
+            android:layout_marginStart="2dp"
             android:textDirection="ltr"
             android:textStyle="bold"
             android:fontFamily="sans-serif-medium"/>
@@ -31,24 +32,40 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Message asdhknwonwodjondadowjodndoijowndojowjdjdojodjojdwoijdoejdoej"
+            android:text="dfghjkcvbnm"
             android:id="@+id/messageText"
-            android:padding="5dp"
             android:textColor="#0F0F10"
             android:fontFamily="sans-serif-medium"
             android:textDirection="ltr"
+            android:layout_margin="5dp"
             android:layout_below="@id/messageSender"
             android:maxWidth="250dp"/>
 
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:src="@mipmap/ic_launcher"
             android:layout_below="@id/messageText"
             android:id="@+id/mediaImage"
+            android:layout_marginStart="2dp"
             android:visibility="gone"
+
             />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5:49 AM"
+            android:textSize="10dp"
+            android:id="@+id/messageTime"
+            android:layout_alignBottom="@id/messageText"
+            android:layout_toEndOf="@id/messageText"
+            />
+
+
+
 
     </RelativeLayout>
 </RelativeLayout>
