--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="+12222222222"
-            android:id="@+id/phoneNumber"/>
+            android:id="@+id/phoneNumber"
+            android:inputType="phone"/>
 
     </LinearLayout>
 
