--- a/app/src/main/res/layout/activity_specific_chat.xml
+++ b/app/src/main/res/layout/activity_specific_chat.xml
@@ -6,13 +6,13 @@
     tools:context=".SpecificChatActivity">
 
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerViewListMessages"
         android:scrollbars="vertical"
-        android:layout_above="@+id/inputLayout"/>
+        android:layout_above="@+id/inputLayout"
+        />
 
 
     <LinearLayout
