--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -63,14 +63,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/colon"
-                    android:layout_toRightOf="@+id/lastMessageSender"
+                    android:layout_toEndOf="@+id/lastMessageSender"
                     android:text=":"/>
 
                 <TextView
                     android:id="@+id/lastMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/colon"
+                    android:layout_toEndOf="@id/colon"
                     android:text="this is text " />
 
                 <TextView
