--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/custom_background_chat"
+    android:padding="5dp"
+    android:layout_margin="2dp"
     >
 
 
@@ -11,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:padding="5dp">
 
         <LinearLayout
             android:layout_width="50dp"
@@ -39,39 +42,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/chatName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chat Name" />
+            android:orientation="vertical"
+            android:padding="3dp">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-
-
+                android:layout_marginStart="5dp">
                 <TextView
-                    android:id="@+id/lastMessageSender"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sender" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/colon"
-                    android:layout_toEndOf="@+id/lastMessageSender"
-                    android:text=":"/>
-
-                <TextView
-                    android:id="@+id/lastMessage"
+                    android:id="@+id/chatName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@id/colon"
-                    android:text="this is text " />
+                    android:text="Chat Name"
+                    android:textSize="20sp"
+                    android:fontFamily="sans-serif"
+                    android:textStyle="bold"
+                    android:layout_alignParentStart="true"/>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -80,8 +67,45 @@
                     android:layout_alignParentEnd="true"
                     android:text="35 09 AM" />
 
+            </RelativeLayout>
 
 
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:padding="3dp"
+                >
+
+
+                <TextView
+                    android:id="@+id/lastMessageSender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sender"
+                    android:textStyle="bold"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/colon"
+                    android:layout_toEndOf="@+id/lastMessageSender"
+                    android:text=":"
+                    android:textStyle="bold"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/lastMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/colon"
+                    android:text="this is text "
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textSize="14sp"/>
 
             </RelativeLayout>
 
