--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,82 +3,94 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
+
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="TUE, APRIL 06, 2021"
-        android:id="@+id/DateView"
-        android:textSize="18sp"
-        android:background="@color/colorAccent"
-        android:fontFamily="sans-serif-black"
-        android:textColor="#ffffff"
-        android:visibility="gone"/>
-
-
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/parentRelativeLayout"
-        android:background="@drawable/custom_background_message_sender"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="3dp"
-        android:padding="5dp"
-        android:layout_below="@id/DateView"
-        >
-
-
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sender ID"
-            android:id="@+id/messageSender"
-            android:textColor="#0720FA"
-            android:textSize="20sp"
-            android:layout_marginStart="2dp"
-            android:textDirection="ltr"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-medium"/>
+            android:text="TUE, APRIL 06, 2021"
+            android:id="@+id/DateView"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textSize="18sp"
+            android:background="@color/colorAccent"
+            android:fontFamily="sans-serif-black"
+            android:textColor="#ffffff"
+            android:visibility="gone"/>
 
 
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_below="@id/messageSender"
-            android:id="@+id/mediaImage"
-            android:layout_marginStart="2dp"
-            android:scaleType="fitXY"
-            android:visibility="gone"
-            android:contentDescription="TODO" />
 
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="dfghjkcvbnm"
-            android:id="@+id/messageText"
-            android:textColor="#0F0F10"
-            android:fontFamily="sans-serif-medium"
-            android:textDirection="ltr"
-            android:layout_margin="5dp"
-            android:layout_below="@id/mediaImage"
-            android:maxWidth="250dp"/>
+            android:id="@+id/parentRelativeLayout"
+            android:background="@drawable/custom_background_message_sender"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
+            android:padding="5dp"
+            android:layout_below="@id/DateView"
+            >
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5:49 AM"
-            android:id="@+id/messageTime"
-            android:layout_alignBottom="@id/messageText"
-            android:layout_toEndOf="@id/messageText"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sender ID"
+                android:id="@+id/messageSender"
+                android:textColor="#0720FA"
+                android:textSize="20sp"
+                android:layout_marginStart="2dp"
+                android:textDirection="ltr"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-medium"/>
+
+
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_below="@id/messageSender"
+                android:id="@+id/mediaImage"
+                android:layout_marginStart="2dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:contentDescription="TODO" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="dfghjkcvbnm"
+                android:id="@+id/messageText"
+                android:textColor="#0F0F10"
+                android:fontFamily="sans-serif-medium"
+                android:textDirection="ltr"
+                android:layout_margin="5dp"
+                android:layout_below="@id/mediaImage"
+                android:maxWidth="250dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5:49 AM"
+                android:id="@+id/messageTime"
+                android:layout_alignBottom="@id/messageText"
+                android:layout_toEndOf="@id/messageText"
+                />
 
 
 
+
+        </RelativeLayout>
 
     </RelativeLayout>
+
+
 </RelativeLayout>
