--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-
     >
 
     <RelativeLayout
@@ -11,20 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TUE, APRIL 06, 2021"
-            android:id="@+id/DateView"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"
-            android:textSize="18sp"
-            android:background="@color/colorAccent"
-            android:fontFamily="sans-serif-black"
-            android:textColor="#ffffff"
-            android:visibility="gone"/>
-
-
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -35,7 +20,6 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="3dp"
             android:padding="5dp"
-            android:layout_below="@id/DateView"
             >
 
 
@@ -89,6 +73,25 @@
 
 
         </RelativeLayout>
+
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TUE, APRIL 06, 2021"
+            android:id="@+id/DateView"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textSize="18sp"
+            android:background="@color/colorAccent"
+            android:fontFamily="sans-serif-black"
+            android:textColor="#ffffff"
+            android:visibility="gone"
+            android:layout_below="@id/parentRelativeLayout"/>
+
+
 
     </RelativeLayout>
 
