--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -11,6 +11,20 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TUE, APRIL 06, 2021"
+            android:id="@+id/DateViewUpper"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-black"
+            android:background="@color/colorPrimary"
+            android:textColor="#ffffff"
+            android:visibility="gone"
+            />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,6 +34,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="3dp"
             android:padding="5dp"
+            android:layout_below="@id/DateViewUpper"
             >
 
 
@@ -74,22 +89,30 @@
 
         </RelativeLayout>
 
-
-
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TUE, APRIL 06, 2021"
-            android:id="@+id/DateView"
+            android:id="@+id/DateViewLower"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
             android:textSize="18sp"
-            android:background="@color/colorAccent"
             android:fontFamily="sans-serif-black"
+            android:background="@color/colorPrimary"
             android:textColor="#ffffff"
             android:visibility="gone"
-            android:layout_below="@id/parentRelativeLayout"/>
+            android:layout_below="@id/parentRelativeLayout"
+            />
+
+
+
+
+
+
+
+
+
+
 
 
 
