Added a new menu option to display all contacts. changed CreateNewChatActivity.java to display single chat users without check boxes, and on clicking the user single chat is created or displayed accordingly, added CreateSingleChatActivity to handle the above functionality.

--- a/app/src/main/res/menu/all_chats_menu.xml
+++ b/app/src/main/res/menu/all_chats_menu.xml
@@ -5,9 +5,14 @@
 
     <item android:title="Create New Chat"
         app:showAsAction="ifRoom"
-        android:id="@+id/createNewChatMenu"
+        android:id="@+id/createNewGroupMenu"
         android:icon="@drawable/ic_baseline_add_24"/>
 
+
+    <item android:title="All Contacts"
+        app:showAsAction="never"
+        android:id="@+id/singleChatsMenu"
+        />
 
 
     <item android:title="Change Profile Photo"
