--- a/app/src/main/res/layout/activity_create_new_chat.xml
+++ b/app/src/main/res/layout/activity_create_new_chat.xml
@@ -6,24 +6,29 @@
     tools:context=".CreateNewChatActivity"
     android:orientation="vertical">
 
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Chat Name"
-        android:id="@+id/chatName"/>
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cancelButton"
-        android:text="CANCEL"/>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Chat Name"
+            android:id="@+id/chatName"
+            android:layout_weight="0.8"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CREATE CHAT"
-        android:id="@+id/newChat"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CREATE CHAT"
+            android:id="@+id/newChat"/>
+
+    </LinearLayout>
+
+
+
 
 
 
