--- a/app/src/main/res/layout/activity_all_chats.xml
+++ b/app/src/main/res/layout/activity_all_chats.xml
@@ -6,6 +6,12 @@
     tools:context=".AllChatsActivity"
     android:orientation="vertical">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WhatsApp"
+        android:id="@+id/whatsApp"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
