--- a/app/src/main/res/layout/activity_new_user_details.xml
+++ b/app/src/main/res/layout/activity_new_user_details.xml
@@ -1,69 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity"
+    tools:context=".NewUserDetails"
     android:orientation="vertical">
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="please Enter your phone number and name"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp" 
-        android:textSize="40sp"
-        android:textAlignment="center"/>
+
+
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone Number:"/>
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/custom_image_background"
+        android:layout_gravity="center"
+        android:layout_marginTop="75dp"
+        >
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="+12222222222"
-            android:id="@+id/phoneNumber"
-            android:inputType="phone"/>
+
+        <ImageView
+            android:id="@+id/newUserProfileImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_person_24"
+            android:background="@drawable/custom_image_background"
+            android:scaleType="fitXY"
+            />
 
     </LinearLayout>
-
-
-
-
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="gone"
-        android:id="@+id/codeLayout">
+        android:layout_gravity="center">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Code"/>
+            android:text="Name:"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="222222"
-            android:id="@+id/verificationCode"/>
+            android:hint="Bhandu"
+            android:id="@+id/name"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="status"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hey there!! MF"
+            android:id="@+id/status" />
+
+    </LinearLayout>
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonSend"
-        android:text="Send"/>
+        android:layout_gravity="center"
+        android:text="SUBMIT"
+        android:id="@+id/submitDetails"/>
 
-
-    
 
 
 
