--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/chatProfileImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_baseline_person_24"
                 android:background="@drawable/custom_image_background"
                 android:scaleType="fitXY"
                 />
