Added UserDetailsActivity and GroupDetailsActivity to display the details of the chat when the user clicks on the chat name. many minor changes to make the app more efficient.

--- a/app/src/main/res/layout/activity_new_user_details.xml
+++ b/app/src/main/res/layout/activity_new_user_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewUserDetails"
+    tools:context=".NewUserDetailsActivity"
     android:orientation="vertical">
 
 
@@ -72,9 +72,6 @@
         android:layout_gravity="center"
         android:text="SUBMIT"
         android:id="@+id/submitDetails"/>
-
-
-
 
 
 
