--- a/app/src/main/res/layout/app_bar_specific_chat.xml
+++ b/app/src/main/res/layout/app_bar_specific_chat.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appToolBarSpecificChat"
+    android:fitsSystemWindows="true"
     app:layout_collapseMode="pin"
     >
 
