Changed the user details activity to allow the current user to change his/her profile. And also made the required changes in other Activities for the same.

--- a/app/src/main/res/menu/all_chats_menu.xml
+++ b/app/src/main/res/menu/all_chats_menu.xml
@@ -15,10 +15,10 @@
         />
 
 
-    <item android:title="Change Profile Photo"
+    <item
+        android:id="@+id/viewProfileMenu"
         app:showAsAction="never"
-        android:id="@+id/changeProfilePictureMenu"
-        />
+        android:title="View Profile" />
 
 
     <item android:title="Logout"
