--- a/app/src/main/res/layout/activity_create_single_chat.xml
+++ b/app/src/main/res/layout/activity_create_single_chat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Your Chat is being Loaded \n please wait"
+        android:text="Please wait, while we load your chat"
         android:textSize="20dp"
         android:layout_gravity="center"
         android:textColor="@color/colorAccent"/>
