--- a/app/src/main/res/drawable/custom_background_message_receiver.xml
+++ b/app/src/main/res/drawable/custom_background_message_receiver.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="5dp"/>
     <corners android:bottomRightRadius="0dp"/>
-    <solid android:color="#A4FA8D"/>
+    <solid android:color="#7BE665" />
 
 </shape>
